<resources>
    <string name="app_name">Authum</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="authum_title">Authum</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">John</string>
    <string name="last_name_hint">Doe</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email_hint">example@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="first_name_required">First Name Required</string>
    <string name="last_name_required">Last Name Required</string>
    <string name="email_required">Email Required</string>
    <string name="password_required">Password Required</string>
    <string name="password_do_not_equal">Not the Same</string>
    <string name="login">Login</string>
    <string name="do_not_have_account_yet">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="required_field">Required Field</string>
    <string name="invalid_credentials">The email address or password you provided is wrong</string>
    <string name="ok">OK</string>
    <string name="aw_shucks">Please Set A Pattern</string>
    <string name="no_pattern">You have not set up a pattern yet. Please set one up now.</string>
    <string name="reset_pattern">You will need to login to your account again to reset the patter.</string>
    <string name="dismiss">dismiss</string>
</resources>
